# TermCode

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  termcode  termcode.cmd  termcode.ps1
src/core/: editor.py
src/ui/: app.py  command_palette.py  styles.css
